# battery-distributed

./: .env.example  .gitmodules  LICENSE  README.md  battery_distributed.service  pyproject.toml  run.sh
battery_distributed/: __main__.py  analyser.py  central.py  controller.py  interface.py  main.py  model.py  sensors.py  telemetry.py
tests/: controller_mock.py  controller_mock.sh
