[tool.poetry]
name = "battery-distributed"
version = "0.1.0"
description = ""
authors = ["Thiago Paiva <thiagohdaqw@gmail.com>"]
readme = "README.md"
packages = [{include = "battery_distributed"}]
license = "MIT"
classifiers = [
    "Intended Audience :: Education",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Recognition",
]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
battery-analyser = { path = "./battery-analyser" }
httpx = "^0.24.1"
picamera = "^1.13"
numpy = ">=1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
